...
                tools:text="2019" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSeason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        tools:itemCount="5"
        tools:listitem="@layout/season_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEpisode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvSeason"
...
