<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/movie"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/movies"/>
    <item
        android:id="@+id/series"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/tv_series"/>

    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites"/>
</menu>